observability/kube-thanos/gen-output/thanos-store-memcached.thanos.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: store-cache
    app.kubernetes.io/name: memcached
    app.kubernetes.io/part-of: thanos
    app.kubernetes.io/version: 1.6.3-alpine
  name: thanos-store-memcached
  namespace: thanos
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: store-cache
      app.kubernetes.io/name: memcached
      app.kubernetes.io/part-of: thanos
  serviceName: thanos-store-memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/component: store-cache
        app.kubernetes.io/name: memcached
        app.kubernetes.io/part-of: thanos
        app.kubernetes.io/version: 1.6.3-alpine
    spec:
      containers:
      - args:
        - -m 1024
        - -I 1m
        - -c 1024
        - -v
        image: docker.io/memcached:1.6.3-alpine
        imagePullPolicy: IfNotPresent
        name: memcached
        ports:
        - containerPort: 11211
          name: client
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --memcached.address=localhost:11211
        - --web.listen-address=0.0.0.0:9150
        image: prom/memcached-exporter:v0.6.0
        imagePullPolicy: IfNotPresent
        name: exporter
        ports:
        - containerPort: 9150
          name: metrics
        resources: {}
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
      serviceAccountName: thanos-store-memcached
