observability/kube-thanos/gen-output/thanos-query-frontend-memcached.thanos.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-frontend-cache
    app.kubernetes.io/name: memcached
    app.kubernetes.io/part-of: thanos
    app.kubernetes.io/version: 1.6.3-alpine
  name: thanos-query-frontend-memcached
  namespace: thanos
spec:
  clusterIP: None
  ports:
  - name: client
    port: 11211
    targetPort: 11211
  - name: metrics
    port: 9150
    targetPort: 9150
  selector:
    app.kubernetes.io/component: query-frontend-cache
    app.kubernetes.io/name: memcached
    app.kubernetes.io/part-of: thanos
