observability/kube-thanos/gen-output/thanos-sidecar.monitoring.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus-sidecar
    app.kubernetes.io/instance: thanos-sidecar
    app.kubernetes.io/name: thanos-sidecar
    app.kubernetes.io/version: v0.30.2
  name: thanos-sidecar
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
